@@ -2,6 +2,11 @@
 
 2006-12-30	Konstantin V. Arkhipov
 
+	* core/Criteria/: moved to main/.
+
+	* core/DB/PostgresDialect.class.php: do-not-quote-integer's logic
+	resurrected.
+
 	* core/OSQL/GroupBy.class.php: re-introduced one more time.
 
 2006-12-29	Konstantin V. Arkhipov
